[project]
name = "architektury"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub<1.0",
    "jupyter>=1.1.1",
    "llama-cpp-python>=0.3.16",
    "torch>=2.9.1",
    "transformers>=4.57.0",
    "matplotlib>=3.7.0",
    "datasets>=4.4.1",
]
